# autofix-swarm

./: .env.example  .gitattributes  .gitignore  README.md  _run_pipeline_test.py  pyproject.toml  run-local.ps1  run_pipeline_test.ps1
.github/workflows/: ci.yml
agents/: README.md  __init__.py  fixer_codex.py  reviewer.py  watcher.py
agents/tests/: test_fixer_codex.py  test_watcher.py
backend/: __init__.py  config.py  database.py  demo_cache.py  main.py  models.py
backend/tests/: __init__.py  test_api.py  test_database.py
eval/: README.md  __init__.py  run_eval.py  seeded_bugs.json
eval/schemas/: issue.schema.json  seeded_bugs.schema.json  verdict.schema.json
eval/tests/: test_run_eval.py
frontend/: ANIMATIONS.md  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: AgentSection.tsx  AnimatedBackground.tsx  AnimatedCard.tsx  CounterAnimation.tsx  Hero.tsx  InfiniteScroll.tsx  MagneticButton.tsx  Silk.tsx  SplitText.tsx
frontend/src/components/dashboard/: AgentLogStream.tsx  ControlPanel.tsx  LiveMetrics.tsx  RepoSourceSelector.tsx  RunProgressBar.tsx  StatusRadar.tsx  index.ts
frontend/src/components/landing/: AgentShowcase.tsx  (+3 more)
frontend/src/hooks/: useHealth.ts  useLatestRun.ts  useMousePosition.ts  usePipelineRun.ts
frontend/src/lib/: api.ts  capability.ts  easing.ts  format.ts  mockData.ts  pageTransition.ts  runTimeline.ts  utils.ts
frontend/src/types/: index.ts
important files/: NEW-COLOR-SCHEME.md  architecture.md  branding-colors.md  color-implementation.md  design.md  logo-prompt.md  phases.md  prd.md  quick-color-reference.md  rules.md
orchestrator/: __init__.py  graph.py
rules/: semgrep-python.yml
sandbox/: README.md  __init__.py  isolate.py
sandbox/tests/: test_isolate.py
seeded_repo/: README.md
seeded_repo/src/autofix_seed/: __init__.py  auth.py  config.py  inventory.py  payments.py  shipping.py
seeded_repo/tests/: _bootstrap.py  test_auth.py  test_config.py  test_inventory.py  test_payments.py  test_shipping.py
(+33 files in other folders)
