[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "autofix-swarm"
version = "0.1.0"
description = "Evaluated, sandboxed bug detection and remediation agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=9.1,<10"]
watcher = ["semgrep==1.170.0"]

[tool.pytest.ini_options]
pythonpath = ["seeded_repo/src"]
testpaths = ["agents/tests", "eval/tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "eval*"]
